--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,5 +6,8 @@ articles:
   b-regrading-with-gradetools: b-regrading-with-gradetools.html
   c-extended-capability-teams: c-extended-capability-teams.html
   d-extended-capability-github: d-extended-capability-github.html
-last_built: 2022-04-06T05:30Z
+last_built: 2022-04-07T04:11Z
+urls:
+  reference: https://federicazoe.github.io/gradetools/reference
+  article: https://federicazoe.github.io/gradetools/articles
 
