Importfrom fs path_ext()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(rstudioapi)
 import(stringr)
 import(svDialogs)
 importFrom(fs,file_create)
+importFrom(fs,path_ext)
 importFrom(fs,path_ext_set)
 importFrom(readr,read_csv)
 importFrom(readr,write_file)
