--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,4 +1,4 @@
-pandoc: 2.14.0.3
+pandoc: 2.17.1.1
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
@@ -6,7 +6,8 @@ articles:
   b-regrading-with-gradetools: b-regrading-with-gradetools.html
   c-extended-capability-teams: c-extended-capability-teams.html
   d-extended-capability-github: d-extended-capability-github.html
-last_built: 2022-04-25T23:03Z
+  e-comprehensive-example: e-comprehensive-example.html
+last_built: 2022-05-02T07:06Z
 urls:
   reference: https://federicazoe.github.io/gradetools/reference
   article: https://federicazoe.github.io/gradetools/articles
