--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,4 +1,4 @@
-pandoc: 2.17.1.1
+pandoc: '2.18'
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
@@ -7,7 +7,7 @@ articles:
   c-extended-capability-teams: c-extended-capability-teams.html
   d-extended-capability-github: d-extended-capability-github.html
   e-comprehensive-example: e-comprehensive-example.html
-last_built: 2022-05-04T23:18Z
+last_built: 2022-09-24T23:32Z
 urls:
   reference: https://federicazoe.github.io/gradetools/reference
   article: https://federicazoe.github.io/gradetools/articles
