--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,15 +10,17 @@ import(dplyr)
 import(fs)
 import(ghclass)
 import(readr)
-import(rmarkdown)
 import(rstudioapi)
 import(stringr)
 import(svDialogs)
 importFrom(fs,file_create)
 importFrom(fs,path_ext)
 importFrom(fs,path_ext_set)
+importFrom(quarto,quarto_render)
 importFrom(readr,read_csv)
 importFrom(readr,write_file)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_split)
+importFrom(svDialogs,dlg_input)
 importFrom(svDialogs,dlg_message)
 importFrom(utils,write.csv)
