ensures all feedback formats work as expected
closes #8

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     fs,
     utils,
     svDialogs,
-    quarto
+    quarto,
+    rmarkdown
 Suggests: 
     knitr,
     testthat (>= 3.0.0)
