--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -27,8 +27,12 @@ jobs:
           extra-packages: pkgdown
           needs: website
 
+      - name: Install package
+        run: R CMD INSTALL .
+
       - name: Deploy package
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          Rscript -e 'pkgdown::build_site(run_examples = FALSE, build_vignettes = FALSE)'
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
