--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Tools to Assist with Providing Grades and Personalized Feedback to Studen
 Version: 0.2.0.9000
 Authors@R: c(
         person(given = "Federica Zoe", family = "Ricci", email = "federicazoericci@gmail.com", role = c("cre", "aut"), comment = c(ORCID = "0000-0002-2560-4543")),
-        person(given = "Catalina", family = "Medina",  role = c("aut"), comment = c(ORCID = "0000-0003-2847-8180")),
+        person(given = "Catalina Mari", family = "Medina",  role = c("aut"), comment = c(ORCID = "0000-0003-2847-8180")),
         person(given = "Mine", family = "Dogucu", role = c("aut"), comment = c(ORCID = "0000-0002-8007-934X"))
         )
 Description: Provides functions to assist with grading and providing feedback to students. 
